// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<form
  className="Form"
  data-test-id="cf-ui-form"
  onSubmit={[Function]}
>
  <div
    className="Form__item Form__item--default"
    key=".0"
  >
    <TextField
      countCharacters={false}
      helpText="Please enter your name"
      id="nameInput"
      isRequired={true}
      isTextarea={false}
      labelText="Name"
      name="nameInput"
      testId="cf-ui-text-field"
      value="Johannes Bugiel"
    />
  </div>
</form>
`;

exports[`renders the component with an additional class name 1`] = `
<form
  className="Form my-extra-class"
  data-test-id="cf-ui-form"
  onSubmit={[Function]}
>
  <div
    className="Form__item Form__item--default"
    key=".0"
  >
    <TextField
      countCharacters={false}
      helpText="Please enter your name"
      id="nameInput"
      isRequired={true}
      isTextarea={false}
      labelText="Name"
      name="nameInput"
      testId="cf-ui-text-field"
      value="Johannes Bugiel"
    />
  </div>
</form>
`;

exports[`renders the component with condensed spacing 1`] = `
<form
  className="Form my-extra-class"
  data-test-id="cf-ui-form"
  onSubmit={[Function]}
>
  <div
    className="Form__item Form__item--condensed"
    key=".0"
  >
    <TextField
      countCharacters={false}
      helpText="Please enter your name"
      id="nameInput"
      isRequired={true}
      isTextarea={false}
      labelText="Name"
      name="nameInput"
      testId="cf-ui-text-field"
      value="Johannes Bugiel"
    />
  </div>
</form>
`;
